--- a/src/app/stats/index.html
+++ b/src/app/stats/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
-
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'">
   </head>
   <body>
     <h1>💖 Hello World!</h1>
