--- a/src/app/scss/_custom_bootstrap.scss
+++ b/src/app/scss/_custom_bootstrap.scss
@@ -1,5 +1,9 @@
 $theme-colors: (
-  "primary": #e5e619,
-  "secondary": #ff468b,
-  "info": #00e3ff
+  "primary": #00bf71,
 );
+
+.btn-primary {
+  color: white !important;
+}
+
+$primary: #00bf71 !default;
